2012-07-20  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/cdt/autotools/core/AutotoolsPlugin.java (getAutotoolCfgOptions): New publicly accessible
	method for retrieving Autotool configuration options for a given build configuration.
	(updateAutotoolCfgOptions): New publicly accessible method for updating Autotool configuration options for
	a given build configuration.
	* src/org/eclipse/cdt/internal/autotools/core/configure/ConfigureMessages.properties: Add new messages for
	errors caused by user reading and updating configuration options.
	* src/org/eclipse/cdt/internal/autotools/core/configure/AutotoolsConfigurationManager.java: Add synchronization to
	all public methods. 
	(updateAutotoolCfgOptions): New method to allow external users to update configuration options.
	(getAutotoolsCfgOptions): New method to get configuration options for a given configuration id.

2012-04-20  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Bump up version to 1.1.0.
	* pom.xml: Ditto.

2012-04-11  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #375007 fix from Anna Dushistova
	* src/org/eclipse.cdt/internal/autotools/core/AutotoolsNewMakeGenerator.java
	(getConfigurePath): If configure command is specified as absolute
	path, just use it.

2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #371277
	* src/org/eclipse/cdt/internal/autotools/core/AutotoolsNewMakeGenerator.java
	(regenerateMakefiles): Fix setting of status on error.
	(runScript): Switch to use sh -c for all script execution.

2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #372557
	* src/org/eclipse/cdt/internal/autotools/core/AutotoolsNewMakeGenerator.java
	(runScript): Fix index out of range exception when environment variable is
	unknown.
	
2012-03-29  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/cdt/autotools/core/AutotoolsNewProjectNature.java: Fix old nature id to contain the .core specifier.

2012-01-03  Jeff Johnston  <jjohnstn@redhat.com>
